// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente GifGrid Debe de mostrar items cuando carga useFetchGifs 1`] = `
<Fragment>
  <h3
    className="text-center mt-5 text-uppercase"
  >
    Morty
  </h3>
  <div
    className="row row-cols-1 row-cols-md-3 g-4 animate__bounceIn"
  >
    <GridItem
      date={121212}
      id={123}
      key="123"
      title="Mory Malvado"
      url="https://www.img.gif"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en el componente GifGrid Debe hacer match con el snapshot 1`] = `
<Fragment>
  <h3
    className="text-center mt-5 text-uppercase"
  >
    Morty
  </h3>
  <p
    className="text-center animate__heartBeat"
  >
    Cargando...
  </p>
  <div
    className="row row-cols-1 row-cols-md-3 g-4 animate__bounceIn"
  />
</Fragment>
`;
